--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -13,5 +13,21 @@
   </p>
   <p>{{ form.submit() }}</p>
 </form>
-{% endif %} {% for post in posts %} {% include '_post.html' %}{% endfor %} {%
-endblock %}
+{% endif %} 
+
+{% for post in posts %} {% include '_post.html' %} {% endfor %} 
+
+{% if prev_url %} 
+
+<a href="{{ prev_url }}">Newer posts</a> 
+
+{% endif %} 
+
+{% if next_url %} 
+
+<a href="{{ next_url }}">Older posts</a>
+
+{% endif %} 
+
+
+{% endblock %}
