--- a/app/templates/500.html
+++ b/app/templates/500.html
@@ -1,5 +1,5 @@
 {% extends "base.html"%}
-{% block content %}
+{% block app_content %}
 <h1>An error has occured</h1>
 <p>Admin has been notified please stay calm</p>
 <p><a href="{{url_for('index')}}">Back</a></p>
