--- a/app/templates/user.html
+++ b/app/templates/user.html
@@ -1,5 +1,5 @@
-{% extends "base.html" %} {% block content %}
-<table>
+{% extends "base.html" %} {% block app_content %}
+<table class="table table-hover">
   <tr valign="top">
     <td><img src="{{ user.avatar(128) }}" /></td>
     <td>
@@ -21,27 +21,34 @@
         {{form.hidden_tag()}} {{form.submit(value='Follow')}}
       </form>
       {% else %}
-      <form action="{{url_for('unfollow',username=user.username)}}" method="POST">
+      <form
+        action="{{url_for('unfollow',username=user.username)}}"
+        method="POST"
+      >
         {{form.hidden_tag()}} {{form.submit(value='Unfollow')}}
       </form>
       {% endif %}
     </td>
   </tr>
 </table>
+
 <hr />
-{% for post in posts %} {% include '_post.html' %} {% endfor %} 
 
-{% if prev_url %} 
+{% for post in posts %} {% include '_post.html' %} {% endfor %}
 
-<a href="{{ prev_url }}">Newer posts</a> 
-
-{% endif %} 
-
-{% if next_url %} 
-
-<a href="{{ next_url }}">Older posts</a>
-
-{% endif %} 
-
+<nav aria-label="...">
+  <ul class="pager">
+    <li class="previous{% if not prev_url %} disabled{% endif %}">
+      <a href="{{ prev_url or '#' }}">
+        <span aria-hidden="true">&larr;</span> Newer posts
+      </a>
+    </li>
+    <li class="next{% if not next_url %} disabled{% endif %}">
+      <a href="{{ next_url or '#' }}">
+        Older posts <span aria-hidden="true">&rarr;</span>
+      </a>
+    </li>
+  </ul>
+</nav>
 
 {% endblock %}
