--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -1,11 +1,15 @@
-{% extends "base.html" %}
-{% import 'bootstrap/wtf.html' as wtf %}
-
-{% block app_content %}
-    <h1>Login</h1>
-    <div class="row">
-        <div class="col-md-4">
-            {{ wtf.quick_form(form) }}
-        </div>
-    </div>
+{% extends "base.html" %} {% import 'bootstrap/wtf.html' as wtf %} {% block
+app_content %}
+<h1>Login</h1>
+<div class="row">
+  <div class="col-md-4">
+    {{ wtf.quick_form(form) }}
+  </div>
+</div>
+<br />
+<p>New User? <a href="{{ url_for('register') }}">Click to Register!</a></p>
+<p>
+  Forgot Your Password?
+  <a href="{{ url_for('reset_password_request') }}">Click to Reset It</a>
+</p>
 {% endblock %}
