--- a/app/templates/user.html
+++ b/app/templates/user.html
@@ -7,7 +7,7 @@
       {% if user.about_me %}
       <p>{{ user.about_me }}</p>
       {% endif %} {% if user.last_seen %}
-      <p>Last seen on: {{ user.last_seen }}</p>
+      <p>Last seen on: {{ moment(user.last_seen).format('LLL') }}</p>
       {% endif %}
 
       <p>
